--- a/assets/css/sty.css
+++ b/assets/css/sty.css
@@ -16,7 +16,7 @@ body {
   display: flex;
 }
 .pricing-table .card {
-  width: 220px;
+  width: 325px;
   height: 370px;
   padding: 30px;
   border-radius: 1.5rem;
@@ -38,7 +38,7 @@ body {
 .pricing-table .card:nth-child(2) {
   margin: 0 30px;
   z-index: 2;
-  width: 250px;
+  width: 354px;
   height: 400px;
   background:#8b8e95;
   background: linear-gradient(to left, #132d5e, #132d5e, #454570);
@@ -57,7 +57,7 @@ body {
   font-size: 6rem;
 }
 .pricing-table .card:nth-child(1) .buy-button, .pricing-table .card:nth-child(3) .buy-button {
-  width: 230px;
+  width: 273px;
   height: 170px;
 }
 .pricing-table .card:nth-child(1) .buy-button h3, .pricing-table .card:nth-child(3) .buy-button h3 {
@@ -123,10 +123,10 @@ body {
 .pricing-table .card .buy-button {
   cursor: pointer;
   position: absolute;
-  width: 250px;
+  width: 291px;
   height: 180px;
   background: #fff;
-  border-radius: 15%;
+  border-radius: 20px;
   right: -34%;
   bottom: -27%;
   transition: all 0.4s ease-in-out;
