--- a/assets/css/sty.css
+++ b/assets/css/sty.css
@@ -9,12 +9,14 @@ body {
 }
 
 .pricing-table {
-  position: absolute;
+  /* position: relative; */
   top: 50%;
   left: 50%;
-  transform: translate(-50%, 0%);
+  /* transform: translate(-50%, 0%); */
   display: flex;
+  justify-content: center;
 }
+
 .pricing-table .card {
   width: 325px;
   height: 370px;
@@ -164,7 +166,33 @@ body {
   left: 50%;
   transform: translate(-50%, 0%);
 }
+@media only screen and (max-width: 657px) {
+  .flex-grid>div{
+    max-width:calc(100% - 40px)!important;
+    
+ }
+}
+@media only screen and (max-width: 768px) {
+  .pricing-table{
+    flex-wrap: wrap;
+ }
+.pricing-table .card {
+  margin-left: 0!important;
+  margin-right: 0!important;
+  width:100% !important;
+  margin-top: 20px !important;
+}
+.buy-button{
+  transform: translate(-40%, 0%);
+}
+.pricing-table .card:hover .buy-button {
+  width: 100%;
+  right: 0%;
+  transform: translate(-0%, 0%);
+  border-radius: 0%;
+}
 
+}
 @-webkit-keyframes text-hover {
   0% {
     right: -30%;
