--- a/assets/css/sty.css
+++ b/assets/css/sty.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700");
+@import url('https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap');
+
 body {
   background: #333745;
   color: #fff;
@@ -215,4 +217,65 @@ body {
   100% {
     right: -30%;
   }
+}
+ body {
+	 height: 100vh;
+	 padding: 0;
+	 margin: 0;
+	 background: #fff;
+}
+ svg.intro {
+	 background: #fff;
+	 max-width: 600px;
+}
+ svg.intro .text {
+	 display: none;
+}
+ svg.intro.go .text {
+	 text-align: center;
+	 font-family: 'Fugaz One';
+	 font-size: 20px;
+	 text-transform: uppercase;
+	 display: flex;
+}
+ svg.intro.go .text-stroke {
+	 fill: none;
+	 stroke: #ff0076;
+	 stroke-width: 0.8px;
+	 stroke-dashoffset: -900;
+	 stroke-dasharray: 900;
+	 stroke-linecap: butt;
+	 stroke-linejoin: round;
+	 animation: dash 10s ease forwards;
+}
+ svg.intro.go .text-stroke:nth-child(2) {
+	 animation-delay: 0.3s;
+}
+ svg.intro.go .text-stroke-2 {
+	 stroke: #ff0076;
+	 animation-delay: 1.2s;
+}
+ @keyframes dash {
+  30% {
+    stroke-dashoffset: 0;
+ }
+  100%{
+    fill:#ff0076
+  }
+}
+ .flex-center svg {
+	 vertical-align: middle;
+	 top: -2px;
+   width:100%;
+   height: 100%;
+  text-align: center;
+
+
+}
+.flex-center{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width:100%;
+  height:100vh;
 }
