--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3520,8 +3520,8 @@ textarea.form-control {
   justify-content: center;
   width: 100%;
   height: 100%;
-  color: #FF0076;
-  background-color: #fff;
+  color: #a3f208;
+  background-color: #181818;
 }
 
 .preloader .preloader-svg {
